oci: throw on layer without digest, plus minor cleanups